Search now works pretty well